--- a/index.html
+++ b/index.html
@@ -14,19 +14,19 @@
 <div class="wrapper">
     <div class="form">
         <form action="#">
-            <h3>Регистрация</h3>
+            <h3>Рёгистрация</h3>
             <div class="inputs">
-                <input required placeholder="Login" name="username" type="text" id="name">
+                <input required placeholder="Log  in" name="username" type="text" id="name">
                 <div class="password">
                     <input required placeholder="Пароль" name="password" type="password" id="pass" class="passes">
                     <a href="#" class="password-control"></a>
                 </div>
                 <div class="password">
-                    <input required placeholder="Повторите пароль" type="password" id="passRep" class="passes">
+                    <input required placeholder="Повторите парёль" type="password" id="passRep" class="passes">
                     <a href="#" class="password-control"></a>
                 </div>
             </div>
-            <button id="btn">Регистрация</button>
+            <button id="btn">Регистратсия</button>
         </form>
         <div class="okay">
             <img src="./img/okay.png" alt="#">
