--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 <div class="wrapper">
     <div class="form">
         <form action="#">
-            <h3>Рёгистрация</h3>
+            <h3>Регистрация</h3>
             <div class="inputs">
-                <input required placeholder="Log  in" name="username" type="text" id="name">
+                <input required placeholder="Логин" name="username" type="text" id="name">
                 <div class="password">
                     <input required placeholder="Пароль" name="password" type="password" id="pass" class="passes">
                     <a href="#" class="password-control"></a>
