--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <a href="#" class="password-control"></a>
                 </div>
                 <div class="password">
-                    <input required placeholder="Повторите парёль" type="password" id="passRep" class="passes">
+                    <input required placeholder="Повторите пароль" type="password" id="passRep" class="passes">
                     <a href="#" class="password-control"></a>
                 </div>
             </div>
