--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <a href="#" class="password-control"></a>
                 </div>
             </div>
-            <button id="btn">Регистратсия</button>
+            <button id="btn">Регистрация</button>
         </form>
         <div class="okay">
             <img src="./img/okay.png" alt="#">
