--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <div class="wrapper">
     <div class="form">
         <form action="#">
-            <h3>Регистрация</h3>
+            <h3>Регистрацсия</h3>
             <div class="inputs">
                 <input required placeholder="Логин" name="username" type="text" id="name">
                 <div class="password">
@@ -26,7 +26,7 @@
                     <a href="#" class="password-control"></a>
                 </div>
             </div>
-            <button id="btn">Зарегистрироваться</button>
+            <button id="btn">Зарегестрироваться</button>
         </form>
         <div class="okay">
             <img src="./img/okay.png" alt="#">
