--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
             <button id="btn">Зарегистрироваться</button>
         </form>
         <div class="okay">
-            <img src="./img/okay.png" alt="#">
+<!--             <img src="./img/okay.png" alt="#"> -->
+            <video src="./img/nice-smack.gif.mp4" autoplay></video>
         </div>
     </div>
 </div>
@@ -37,3 +38,4 @@
 </body>
 <script src="js/main.js"></script>
 </html>
+
