--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </form>
         <div class="okay">
 <!--             <img src="./img/okay.png" alt="#"> -->
-            <video src="./img/nice-smack.gif.mp4" autoplay></video>
+             <video src="./img/nice-smack.gif.mp4" autoplay loop muted playsinline></video>
         </div>
     </div>
 </div>
@@ -38,4 +38,5 @@
 </body>
 <script src="js/main.js"></script>
 </html>
+
 
