--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@
             <button id="btn">Зарегистрироваться</button>
         </form>
         <div class="okay">
-<!--             <img src="./img/okay.png" alt="#"> -->
-             <video src="./img/nice-smack.gif.mp4" autoplay loop muted playsinline></video>
+            <img src="./img/okay.png" alt="#">
         </div>
     </div>
 </div>
@@ -38,5 +37,6 @@
 </body>
 <script src="js/main.js"></script>
 </html>
+
 
 
